--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,3 +44,58 @@ litellm = [
 
 [project.urls]
 "Homepage" = "https://atla-ai.com"
+
+[tool.uv]
+required-version = ">=0.7.2"
+
+[tool.mypy]
+explicit_package_bases = true
+namespace_packages = true
+implicit_optional = false
+follow_untyped_imports = true
+plugins = ["pydantic.mypy"]
+mypy_path = ["."]
+exclude = ["examples/"]
+
+[tool.pydantic-mypy]
+init_forbid_extra = true
+init_typed = true
+warn_required_dynamic_aliases = true
+warn_untyped_fields = true
+
+[[tool.mypy.overrides]]
+module = [""]
+follow_untyped_imports = false
+ignore_missing_imports = true
+follow_imports = "skip"
+
+[tool.ruff]
+exclude = [".venv"]
+line-length = 90
+indent-width = 4
+
+[tool.ruff.format]
+quote-style = "double"
+exclude = ["*.ipynb"]
+
+[tool.ruff.lint]
+exclude = ["*.ipynb"]
+select = [
+    "B",
+    "C",
+    "E",
+    "F",
+    "I",
+    "RUF",
+    "W",
+    "D",
+]
+ignore = []
+fixable = ["ALL"]
+unfixable = []
+
+[tool.ruff.lint.mccabe]
+max-complexity = 18
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
