--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ name = "atla-insights"
 version = "0.0.1a4"
 description = "Atla is a platform for monitoring and improving AI agents."
 readme = "README.md"
-requires-python = ">=3.11"
-license = { text = "MIT" }
+requires-python = ">=3.10"
+license = { text = "Apache-2.0" }
 authors = [{ name = "Atla Team", email = "support@atla-ai.com" }]
 classifiers = [
+    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.11",
-    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.10"
 ]
 dependencies = [
     "logfire>=3.14.1",
