Add OpenAI agents instrumentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,12 +26,13 @@ dependencies = [
 [dependency-groups]
 dev = [
     "agno>=1.5.0",
+    "litellm>=1.67.0",
+    "litellm[proxy]",
+    "openai-agents>=0.0.7",
     "openinference-instrumentation-agno>=0.1.4",
     "pytest>=8.3.4",
     "pytest-asyncio>=0.26.0",
     "pytest-httpserver>=1.1.3",
-    "litellm>=1.67.0",
-    "litellm[proxy]",
 ]
 
 [project.optional-dependencies]
