--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,9 @@ dev = [
 agno = [
     "openinference-instrumentation-agno>=0.1.4",
 ]
+anthropic = [
+    "openinference-instrumentation-anthropic>=0.1.18",
+]
 ci = [
     "mypy>=1.15.0",
     "ruff>=0.11.7",
