--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,11 @@ dependencies = [
 [dependency-groups]
 dev = [
     "agno>=1.5.0",
+    "anthropic>=0.52.1",
+    "langchain>=0.3.18",
+    "langchain-openai>=0.3.4",
+    "langgraph>=0.3.20",
     "litellm>=1.72.0",
-    "litellm[proxy]",
     "openai-agents>=0.0.7",
     "openinference-instrumentation-agno>=0.1.4",
     "openinference-instrumentation-anthropic>=0.1.18",
@@ -37,6 +40,7 @@ dev = [
     "pytest>=8.3.4",
     "pytest-asyncio>=0.26.0",
     "pytest-httpserver>=1.1.3",
+    "smolagents",
 ]
 
 [project.optional-dependencies]
@@ -55,7 +59,6 @@ langchain = [
 ]
 litellm = [
     "litellm>=1.72.0",
-    "litellm[proxy]",
 ]
 mcp = [
     "openinference-instrumentation-mcp>=1.3.0",
