--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ dev = [
     "pytest>=8.3.4",
     "pytest-asyncio>=0.26.0",
     "pytest-httpserver>=1.1.3",
-    "smolagents",
+    "smolagents>=1.17.0",
 ]
 
 [project.optional-dependencies]
