--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,9 @@ litellm = [
 mcp = [
     "openinference-instrumentation-mcp>=1.3.0",
 ]
+openai = [
+    "openinference-instrumentation-openai>=0.1.30",
+]
 openai-agents = [
     "openinference-instrumentation-openai>=0.1.30",
     "openinference-instrumentation-openai-agents>=0.1.12",
