--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "atla-insights"
-version = "0.0.1a11"
+version = "0.0.1a12"
 description = "Atla is a platform for monitoring and improving AI agents."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -27,6 +27,7 @@ dependencies = [
 dev = [
     "agno>=1.5.0",
     "anthropic>=0.52.1",
+    "google-genai>=1.19.0",
     "langchain>=0.3.18",
     "langchain-openai>=0.3.4",
     "langgraph>=0.3.20",
@@ -35,6 +36,7 @@ dev = [
     "openai-agents>=0.0.7",
     "openinference-instrumentation-agno>=0.1.4",
     "openinference-instrumentation-anthropic>=0.1.18",
+    "openinference-instrumentation-google-genai>=0.1.2",
     "openinference-instrumentation-langchain>=0.1.43",
     "openinference-instrumentation-mcp>=1.3.0",
     "openinference-instrumentation-openai>=0.1.30",
@@ -56,6 +58,9 @@ anthropic = [
 ci = [
     "mypy>=1.15.0",
     "ruff>=0.11.7",
+]
+google-genai = [
+    "openinference-instrumentation-google-genai>=0.1.2",
 ]
 langchain = [
     "openinference-instrumentation-langchain>=0.1.43",
