--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dev = [
     "openai-agents>=0.0.7",
     "openinference-instrumentation-agno>=0.1.4",
     "openinference-instrumentation-anthropic>=0.1.18",
+    "openinference-instrumentation-crewai>=0.1.10",
     "openinference-instrumentation-google-genai>=0.1.2",
     "openinference-instrumentation-langchain>=0.1.43",
     "openinference-instrumentation-mcp>=1.3.0",
