--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "opentelemetry-api>=1.32.1",
     "opentelemetry-exporter-otlp-proto-grpc>=1.32.1",
     "pydantic>=2.11.4",
+    "wrapt>=1.17.2",
 ]
 
 [dependency-groups]
