--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ classifiers = [
 dependencies = [
     "logfire>=3.14.1",
     "openai>=1.77.0",
+    "openinference-instrumentation>=0.1.32",
+    "openinference-semantic-conventions>=0.1.17",
     "opentelemetry-api>=1.32.1",
     "opentelemetry-exporter-otlp-proto-grpc>=1.32.1",
     "pydantic>=2.11.4",
