--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,36 +28,16 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "agno>=1.5.0",
-    "anthropic>=0.52.1",
-    "crewai>=0.130.0",
-    "google-genai>=1.19.0",
-    "langchain>=0.3.18",
-    "langchain-openai>=0.3.4",
-    "langgraph>=0.3.20",
-    "litellm>=1.72.0",
-    "mcp>=1.9.0",
-    "openai-agents>=0.0.7",
-    "openinference-instrumentation-agno>=0.1.4",
-    "openinference-instrumentation-anthropic>=0.1.18",
-    "openinference-instrumentation-crewai>=0.1.10",
-    "openinference-instrumentation-google-genai>=0.1.2",
-    "openinference-instrumentation-langchain>=0.1.43",
-    "openinference-instrumentation-mcp>=1.3.0",
-    "openinference-instrumentation-openai>=0.1.30",
-    "openinference-instrumentation-openai-agents>=0.1.12",
-    "openinference-instrumentation-smolagents>=0.1.12",
-    "pytest>=8.3.4",
-    "pytest-asyncio>=0.26.0",
-    "pytest-httpserver>=1.1.3",
-    "smolagents>=1.17.0",
+    "atla-insights[all,ci]",
 ]
 
 [project.optional-dependencies]
 agno = [
+    "agno>=1.5.0",
     "openinference-instrumentation-agno>=0.1.4",
 ]
 anthropic = [
+    "anthropic>=0.52.1",
     "openinference-instrumentation-anthropic>=0.1.18",
 ]
 all = [
@@ -66,32 +46,43 @@ all = [
 ci = [
     "mypy>=1.15.0",
     "ruff>=0.11.7",
+    "pytest>=8.3.4",
+    "pytest-asyncio>=0.26.0",
+    "pytest-httpserver>=1.1.3",
 ]
 crewai = [
+    "crewai>=0.130.0",
     "litellm>=1.72.0",
     "openinference-instrumentation-crewai>=0.1.10",
 ]
 google-genai = [
+    "google-genai>=1.19.0",
     "openinference-instrumentation-google-genai>=0.1.2",
 ]
 langchain = [
+    "langchain>=0.3.18",
+    "langchain-openai>=0.3.4",
+    "langgraph>=0.3.20",
     "openinference-instrumentation-langchain>=0.1.43",
 ]
 litellm = [
     "litellm>=1.72.0",
 ]
 mcp = [
+    "mcp>=1.9.0",
     "openinference-instrumentation-mcp>=1.3.0",
 ]
 openai = [
     "openinference-instrumentation-openai>=0.1.30",
 ]
 openai-agents = [
+    "openai-agents>=0.0.7",
     "openinference-instrumentation-openai>=0.1.30",
     "openinference-instrumentation-openai-agents>=0.1.12",
 ]
 smolagents = [
     "openinference-instrumentation-smolagents>=0.1.12",
+    "smolagents>=1.17.0",
 ]
 
 [project.urls]
