--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,7 +97,7 @@ namespace_packages = true
 implicit_optional = false
 follow_untyped_imports = true
 plugins = ["pydantic.mypy"]
-mypy_path = ["."]
+mypy_path = ["src"]
 exclude = ["examples/"]
 
 [tool.pydantic-mypy]
