--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "opentelemetry-api>=1.32.1",
     "opentelemetry-exporter-otlp-proto-grpc>=1.32.1",
     "pydantic>=2.11.4",
+    "rich>=13.9.4",
     "wrapt>=1.17.2",
 ]
 
