--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "openinference-semantic-conventions>=0.1.17",
     "opentelemetry-api>=1.32.1",
     "opentelemetry-exporter-otlp-proto-grpc>=1.32.1",
+    "opentelemetry-exporter-otlp-proto-http>=1.32.1",
+    "opentelemetry-instrumentation>=0.54b0",
     "pydantic>=2.11.4",
     "rich>=13.9.4",
     "wrapt>=1.17.2",
