--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ authors = [{ name = "Atla Team", email = "support@atla-ai.com" }]
 classifiers = [
     "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.10"
+    "Programming Language :: Python :: 3.10",
 ]
 dependencies = [
     "openai>=1.77.0",
@@ -29,22 +29,18 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = [
-    "atla-insights[all,ci]",
-]
+dev = ["atla-insights[all,ci]"]
 
 [project.optional-dependencies]
-agno = [
-    "agno>=1.5.0",
-    "openinference-instrumentation-agno>=0.1.4",
+all = [
+    "atla-insights[agno,anthropic,baml,crewai,google-genai,google-generativeai,langchain,litellm,mcp,openai,openai-agents,smolagents]",
 ]
+agno = ["agno>=1.5.0", "openinference-instrumentation-agno>=0.1.4"]
 anthropic = [
     "anthropic>=0.52.1",
     "openinference-instrumentation-anthropic>=0.1.18",
 ]
-all = [
-    "atla-insights[agno,anthropic,crewai,google-genai,google-generativeai,langchain,litellm,mcp,openai,openai-agents,smolagents]",
-]
+baml = ["baml-py>=0.201.0"]
 ci = [
     "mypy>=1.15.0",
     "ruff>=0.11.7",
@@ -71,16 +67,9 @@ langchain = [
     "langgraph>=0.3.20",
     "openinference-instrumentation-langchain>=0.1.43",
 ]
-litellm = [
-    "litellm>=1.72.0",
-]
-mcp = [
-    "mcp>=1.9.0",
-    "openinference-instrumentation-mcp>=1.3.0",
-]
-openai = [
-    "openinference-instrumentation-openai>=0.1.30",
-]
+litellm = ["litellm>=1.72.0"]
+mcp = ["mcp>=1.9.0", "openinference-instrumentation-mcp>=1.3.0"]
+openai = ["openinference-instrumentation-openai>=0.1.30"]
 openai-agents = [
     "openai-agents>=0.0.7",
     "openinference-instrumentation-openai>=0.1.30",
@@ -129,16 +118,7 @@ exclude = ["*.ipynb"]
 
 [tool.ruff.lint]
 exclude = ["*.ipynb"]
-select = [
-    "B",
-    "C",
-    "E",
-    "F",
-    "I",
-    "RUF",
-    "W",
-    "D",
-]
+select = ["B", "C", "E", "F", "I", "RUF", "W", "D"]
 ignore = []
 fixable = ["ALL"]
 unfixable = []
