--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "atla-insights"
-version = "0.0.5"
+version = "0.0.6a1"
 description = "Atla is a platform for monitoring and improving AI agents."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -35,12 +35,17 @@ dev = ["atla-insights[all,ci]"]
 all = [
     "atla-insights[agno,anthropic,baml,crewai,google-genai,google-generativeai,langchain,litellm,mcp,openai,openai-agents,smolagents]",
 ]
-agno = ["agno>=1.5.0", "openinference-instrumentation-agno>=0.1.4"]
+agno = [
+    "agno>=1.5.0",
+    "openinference-instrumentation-agno>=0.1.4",
+]
 anthropic = [
     "anthropic>=0.52.1",
     "openinference-instrumentation-anthropic>=0.1.18",
 ]
-baml = ["baml-py>=0.201.0"]
+baml = [
+    "baml-py>=0.201.0",
+]
 ci = [
     "mypy>=1.15.0",
     "ruff>=0.11.7",
@@ -108,7 +113,7 @@ ignore_missing_imports = true
 follow_imports = "skip"
 
 [tool.ruff]
-exclude = [".venv"]
+exclude = [".venv", "examples/frameworks/instrument_baml/baml_client"]
 line-length = 90
 indent-width = 4
 
