--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "atla-insights"
-version = "0.0.6a1"
+version = "0.0.6"
 description = "Atla is a platform for monitoring and improving AI agents."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -33,7 +33,7 @@ dev = ["atla-insights[all,ci]"]
 
 [project.optional-dependencies]
 all = [
-    "atla-insights[agno,anthropic,baml,crewai,google-genai,google-generativeai,langchain,litellm,mcp,openai,openai-agents,smolagents]",
+    "atla-insights[agno,anthropic,baml,bedrock,crewai,google-genai,google-generativeai,langchain,litellm,mcp,openai,openai-agents,smolagents]",
 ]
 agno = [
     "agno>=1.5.0",
@@ -45,6 +45,10 @@ anthropic = [
 ]
 baml = [
     "baml-py>=0.201.0",
+]
+bedrock = [
+    "boto3>=1.39.4",
+    "openinference-instrumentation-bedrock>=0.1.26",
 ]
 ci = [
     "mypy>=1.15.0",
