--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ crewai = [
 ]
 google-genai = [
     "google-genai>=1.19.0",
-    "openinference-instrumentation-google-genai>=0.1.2",
+    "openinference-instrumentation-google-genai==0.1.2",
 ]
 google-generativeai = [
     "google-generativeai>=0.7.0",
@@ -67,7 +67,7 @@ langchain = [
     "langchain>=0.3.18",
     "langchain-openai>=0.3.4",
     "langgraph>=0.3.20",
-    "openinference-instrumentation-langchain>=0.1.43",
+    "openinference-instrumentation-langchain==0.1.43",
 ]
 litellm = ["litellm>=1.72.0"]
 mcp = ["mcp>=1.9.0", "openinference-instrumentation-mcp>=1.3.0"]
