--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ ci = [
 ]
 crewai = [
     "crewai>=0.130.0",
-    "litellm>=1.72.0",
+    "litellm>=1.72.0,<1.74.0",
     "openinference-instrumentation-crewai>=0.1.10",
 ]
 google-genai = [
@@ -69,7 +69,7 @@ langchain = [
     "langgraph>=0.3.20",
     "openinference-instrumentation-langchain==0.1.43",
 ]
-litellm = ["litellm>=1.72.0"]
+litellm = ["litellm>=1.72.0,<1.74.0"]
 mcp = ["mcp>=1.9.0", "openinference-instrumentation-mcp>=1.3.0"]
 openai = ["openinference-instrumentation-openai>=0.1.30"]
 openai-agents = [
