--- a/js/examples/nextjs-openai/package.json
+++ b/js/examples/nextjs-openai/package.json
@@ -14,6 +14,7 @@
         "@vercel/otel": "^1.13.0",
         "ai": "^4.0.30",
         "next": "14.2.5",
+        "path": "^0.12.7",
         "react": "18.3.1",
         "react-dom": "18.3.1"
     },
