--- a/js/package.json
+++ b/js/package.json
@@ -5,7 +5,8 @@
     "type": "module",
     "main": "src/index.ts",
     "scripts": {
-        "build": "tsc",
+        "build": "tsc --noEmit",
+        "build:dist": "tsc --declaration --outDir ./dist",
         "test": "jest "
     },
     "keywords": [],
@@ -20,9 +21,11 @@
         "@types/jest": "^30.0.0",
         "jest": "^30.0.5",
         "ts-jest": "^29.4.1",
+        "tsx": "^4.20.3",
         "typescript": "^5.9.2"
     },
     "dependencies": {
+        "@arizeai/openinference-instrumentation-openai": "^3.2.1",
         "@arizeai/openinference-semantic-conventions": "^2.1.1",
         "@arizeai/openinference-vercel": "^2.3.2",
         "@opentelemetry/api": "^1.9.0",
@@ -34,6 +37,9 @@
         "@opentelemetry/resources": "^1.25.1",
         "@opentelemetry/sdk-logs": "^0.46.0",
         "@opentelemetry/sdk-trace-base": "^1.25.1",
-        "@vercel/otel": "^1.13.0"
+        "@opentelemetry/sdk-trace-node": "^1.25.1",
+        "@opentelemetry/semantic-conventions": "^1.25.1",
+        "@vercel/otel": "^1.13.0",
+        "openai": "^5.12.2"
     }
 }
