--- a/src/js/tsconfig.json
+++ b/src/js/tsconfig.json
@@ -5,7 +5,7 @@
         "moduleResolution": "Bundler",
         "declaration": true,
         "outDir": "./dist",
-        "rootDir": "./src",
+        "rootDir": ".",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
@@ -15,6 +15,6 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true
     },
-    "include": ["src/**/*", "test/**/*", "examples/**/*"],
+    "include": ["src/**/*", "test/**/*", "examples/**/*", "tsconfig.json"],
     "exclude": ["node_modules", "dist"]
 }
