--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,7 +96,7 @@ implicit_optional = false
 follow_untyped_imports = true
 plugins = ["pydantic.mypy"]
 mypy_path = ["src"]
-exclude = ["examples/"]
+exclude = ["examples/", "src/atla_insights/client/_generated_client/"]
 
 [tool.pydantic-mypy]
 init_forbid_extra = true
