--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "atla-insights"
-version = "0.0.16"
+version = "0.0.17"
 description = "Atla is a platform for monitoring and improving AI agents."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -16,6 +16,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
 ]
 dependencies = [
+    "httpx>=0.24.0",
     "openai>=1.77.0",
     "openinference-instrumentation>=0.1.32",
     "openinference-semantic-conventions>=0.1.17",
@@ -95,7 +96,7 @@ implicit_optional = false
 follow_untyped_imports = true
 plugins = ["pydantic.mypy"]
 mypy_path = ["src"]
-exclude = ["examples/"]
+exclude = ["examples/", "src/atla_insights/client/_generated_client/"]
 
 [tool.pydantic-mypy]
 init_forbid_extra = true
@@ -110,7 +111,11 @@ ignore_missing_imports = true
 follow_imports = "skip"
 
 [tool.ruff]
-exclude = [".venv", "examples/frameworks/instrument_baml/baml_client"]
+exclude = [
+    ".venv",
+    "examples/frameworks/instrument_baml/baml_client",
+    "src/atla_insights/client/_generated_client",
+]
 line-length = 90
 indent-width = 4
 
