--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "atla-insights"
-version = "0.0.17"
+version = "0.0.18"
 description = "Atla is a platform for monitoring and improving AI agents."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -34,11 +34,10 @@ dev = ["atla-insights[all,ci]"]
 
 [project.optional-dependencies]
 all = [
-    "atla-insights[agno,anthropic,baml,bedrock,crewai,google-genai,google-generativeai,langchain,litellm,mcp,openai,openai-agents,smolagents]",
+    "atla-insights[agno,anthropic,baml,bedrock,claude-code-sdk,crewai,google-genai,google-generativeai,langchain,litellm,mcp,openai,openai-agents,smolagents]",
 ]
 agno = ["agno>=1.5.0", "openinference-instrumentation-agno>=0.1.4"]
 anthropic = [
-    "anthropic>=0.52.1",
     "anthropic[bedrock]>=0.52.1",
     "openinference-instrumentation-anthropic>=0.1.18",
 ]
@@ -51,6 +50,7 @@ ci = [
     "pytest-asyncio>=0.26.0",
     "pytest-httpserver>=1.1.3",
 ]
+claude-code-sdk = ["claude-code-sdk>=0.0.19"]
 crewai = [
     "crewai>=0.130.0",
     "litellm>=1.72.0,<1.74.0",
@@ -79,8 +79,8 @@ openai-agents = [
     "openinference-instrumentation-openai-agents>=0.1.12",
 ]
 smolagents = [
-    "openinference-instrumentation-smolagents>=0.1.12",
-    "smolagents>=1.17.0",
+    "openinference-instrumentation-smolagents>=0.1.14",
+    "smolagents<1.21.0,>=1.19.0",
 ]
 
 [project.urls]
