--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "atla-insights"
-version = "0.0.19"
+version = "0.0.20"
 description = "Atla is a platform for monitoring and improving AI agents."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -25,6 +25,7 @@ dependencies = [
     "opentelemetry-exporter-otlp-proto-http>=1.32.1",
     "opentelemetry-instrumentation>=0.54b0",
     "pydantic>=2.11.4",
+    "python-dateutil>=2.8.0",
     "rich>=13.9.4",
     "wrapt>=1.17.2",
 ]
