--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
 ]
 dependencies = [
+    "cuid2>=2.0.1",
     "httpx>=0.24.0",
     "openai>=1.77.0",
     "openinference-instrumentation>=0.1.32",
@@ -24,6 +25,7 @@ dependencies = [
     "opentelemetry-exporter-otlp-proto-grpc>=1.32.1",
     "opentelemetry-exporter-otlp-proto-http>=1.32.1",
     "opentelemetry-instrumentation>=0.54b0",
+    "pygit2>=1.16.0",
     "pydantic>=2.11.4",
     "python-dateutil>=2.8.0",
     "rich>=13.9.4",
