--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "atla-insights"
-version = "0.0.27"
+version = "0.0.28"
 description = "Atla is a platform for monitoring and improving AI agents."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -37,7 +37,7 @@ dev = ["atla-insights[all,ci]"]
 
 [project.optional-dependencies]
 all = [
-    "atla-insights[agno,anthropic,baml,bedrock,claude-code-sdk,crewai,google-genai,google-generativeai,langchain,litellm,mcp,openai,openai-agents,smolagents]",
+    "atla-insights[agno,anthropic,baml,bedrock,claude-code-sdk,crewai,google-adk,google-genai,google-generativeai,langchain,litellm,mcp,openai,openai-agents,smolagents]",
 ]
 agno = ["agno>=1.5.0", "openinference-instrumentation-agno>=0.1.4"]
 anthropic = [
@@ -58,6 +58,10 @@ crewai = [
     "crewai>=0.130.0",
     "litellm>=1.72.0,<1.74.0",
     "openinference-instrumentation-crewai>=0.1.10",
+]
+google-adk = [
+    "google-adk >= 1.2.1",
+    "openinference-instrumentation-google-adk>=0.1.4",
 ]
 google-genai = [
     "google-genai>=1.19.0",
