--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "python-dateutil>=2.8.0",
     "rich>=13.9.4",
     "wrapt>=1.17.2",
+    "human-id>=0.2.0",
 ]
 
 [dependency-groups]
