--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ dev = ["atla-insights[all,ci]"]
 
 [project.optional-dependencies]
 all = [
-    "atla-insights[agno,anthropic,baml,bedrock,claude-code-sdk,crewai,google-adk,google-genai,google-generativeai,langchain,litellm,mcp,openai,openai-agents,pydantic-ai,smolagents]",
+    "atla-insights[agno,anthropic,baml,bedrock,claude-agent-sdk,claude-code-sdk,crewai,google-adk,google-genai,google-generativeai,langchain,litellm,mcp,openai,openai-agents,pydantic-ai,smolagents]",
 ]
 agno = ["agno>=1.5.2", "openinference-instrumentation-agno>=0.1.15"]
 anthropic = [
@@ -54,6 +54,7 @@ ci = [
     "pytest-asyncio>=0.26.0",
     "pytest-httpserver>=1.1.3",
 ]
+claude-agent-sdk = ["claude-agent-sdk>=0.1.5"]
 claude-code-sdk = ["claude-code-sdk>=0.0.21"]
 crewai = [
     "crewai>=0.130.0",
