--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "atla-insights"
-version = "0.0.35"
+version = "0.0.36"
 description = "Atla is a platform for monitoring and improving AI agents."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -29,7 +29,7 @@ dependencies = [
     "pydantic>=2.11.4",
     "python-dateutil>=2.8.0",
     "rich>=13.9.4",
-    "wrapt>=1.17.2",
+    "wrapt>=1.17.2,<2.0.0",
     "human-id>=0.2.0",
 ]
 
