--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "atla-insights"
-version = "0.0.36"
+version = "0.0.37"
 description = "Atla is a platform for monitoring and improving AI agents."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -38,7 +38,7 @@ dev = ["atla-insights[all,ci]"]
 
 [project.optional-dependencies]
 all = [
-    "atla-insights[agno,anthropic,baml,bedrock,claude-agent-sdk,claude-code-sdk,crewai,google-adk,google-genai,google-generativeai,langchain,litellm,mcp,openai,openai-agents,pydantic-ai,smolagents]",
+    "atla-insights[agno,anthropic,baml,bedrock,claude-agent-sdk,claude-code-sdk,crewai,elevenlabs,google-adk,google-genai,google-generativeai,langchain,litellm,mcp,openai,openai-agents,pydantic-ai,smolagents]",
 ]
 agno = ["agno>=1.5.2", "openinference-instrumentation-agno>=0.1.15"]
 anthropic = [
@@ -61,6 +61,7 @@ crewai = [
     "litellm>=1.72.0,<1.74.0",
     "openinference-instrumentation-crewai==0.1.10",
 ]
+elevenlabs = ["elevenlabs>=2.16.0"]
 google-adk = [
     "google-adk >= 1.2.1",
     "openinference-instrumentation-google-adk>=0.1.4",
